Load dependencies upon package installation
Dependencies shouldnt be loaded within a package function but rather when the package is loaded by adding them to the DESCRIPTION FILE

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,10 @@ Depends:
 License: What license is it under?
 LazyData: true
 RoxygenNote: 5.0.0
+Imports:
+  GenomicRanges,
+  plyr,
+  reshape2,
+  rtracklayer,
+  speedglm,
+  stringr
