--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,9 @@ Depends:
 License: What license is it under?
 LazyData: true
 RoxygenNote: 5.0.0
+biocViews:
 Imports:
+  biomaRt,
   GenomicRanges,
   plyr,
   reshape2,
