--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,8 @@ License: What license is it under?
 LazyData: true
 RoxygenNote: 5.0.0
 biocViews:
-  biomaRt
 Depends:
+  biomaRt,
   GenomicRanges,
   plyr,
   reshape2,
